src/objects/workday_time_off_balance__x.object
<CustomObject>
    <description>workday.time_off_balance</description>
    <externalDataSource>WorkDay_HRIS</externalDataSource>
    <externalName>workday.time_off_balance</externalName>
    <fields>
        <fullName>balance__c</fullName>
        <description>balance</description>
        <externalDeveloperName>balance</externalDeveloperName>
        <label>balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>carry_over_allowed__c</fullName>
        <description>carry_over_allowed</description>
        <externalDeveloperName>carry_over_allowed</externalDeveloperName>
        <label>carry_over_allowed</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employee_id__c</fullName>
        <description>employee_id</description>
        <externalDeveloperName>employee_id</externalDeveloperName>
        <label>employee_id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>time_off_plan__c</fullName>
        <description>time_off_plan</description>
        <externalDeveloperName>time_off_plan</externalDeveloperName>
        <label>time_off_plan</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unit_of_time__c</fullName>
        <description>unit_of_time</description>
        <externalDeveloperName>unit_of_time</externalDeveloperName>
        <label>unit_of_time</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>workday.time_off_balance</label>
    <pluralLabel>workday.time_off_balance</pluralLabel>
</CustomObject>